--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,9 @@ target/
 # Backend build debug output
 crates/pixi-build-*/debug/
 
+# Backend test artifacts channel
+pixi-build-backends/backends/pixi-build-ros/tests/integration/artifacts-channel/
+
 # IDE and editor files
 .idea/
 .vscode/
