--- a/.github/workflows/backends-ros.yml
+++ b/.github/workflows/backends-ros.yml
@@ -1,23 +1,12 @@
 name: Backends - ROS
 
 on:
-  push:
-    branches: [main]
-    paths:
-      - crates/pixi-build-backend/**
-      - crates/pixi/**
-      - Cargo.*
-      - pixi-build-backends/py-pixi-build-backend/**
-      - pixi-build-backends/backends/pixi-build-ros/**
-      - .github/workflows/backends-ros.yml
-  pull_request:
-    paths:
-      - crates/pixi-build-backend/**
-      - crates/pixi/**
-      - Cargo.*
-      - pixi-build-backends/py-pixi-build-backend/**
-      - pixi-build-backends/backends/pixi-build-ros/**
-      - .github/workflows/backends-ros.yml
+  workflow_call:
+    inputs:
+      sha:
+        type: string
+        description: "The commit sha for artifact lookup"
+        required: true
   workflow_dispatch:
 
 concurrency:
@@ -31,6 +20,8 @@ jobs:
   test:
     name: Test the pixi-build-ros package
     runs-on: ubuntu-latest
+    env:
+      TARGET_RELEASE: target/pixi/release
     steps:
       - uses: actions/checkout@v4
         with:
@@ -39,6 +30,15 @@ jobs:
       - uses: prefix-dev/setup-pixi@82d477f15f3a381dbcc8adc1206ce643fe110fb7 # v0.9.3
         with:
           manifest-path: pixi-build-backends/backends/pixi-build-ros/pixi.toml
+      - name: Download pixi binary
+        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4
+        with:
+          name: pixi-linux-x86_64-${{ inputs.sha }}
+          path: ${{ env.TARGET_RELEASE }}
+      - name: Add pixi binary to PATH
+        run: |
+          chmod a+x ${{ github.workspace }}/${{ env.TARGET_RELEASE }}/pixi
+          echo "${{ github.workspace }}/${{ env.TARGET_RELEASE }}" >> $GITHUB_PATH
       - name: Run mypy
         run: |
           cd pixi-build-backends/backends/pixi-build-ros
@@ -46,7 +46,7 @@ jobs:
       - name: Run tests
         run: |
           cd pixi-build-backends/backends/pixi-build-ros
-          pixi run test --color=yes
+          pixi run test-ci --color=yes
 
   integration-test:
     name: Integration tests
@@ -55,11 +55,11 @@ jobs:
       matrix:
         include:
           - os: ubuntu-latest
-            target: x86_64-unknown-linux-musl
+            artifact: pixi-linux-x86_64
           - os: macos-14
-            target: aarch64-apple-darwin
+            artifact: pixi-macos-aarch64
           - os: windows-latest
-            target: x86_64-pc-windows-msvc
+            artifact: pixi-windows-x86_64
     runs-on: ${{ matrix.os }}
     env:
       TARGET_RELEASE: target/pixi/release
@@ -72,8 +72,11 @@ jobs:
         with:
           manifest-path: pixi-build-backends/backends/pixi-build-ros/pixi.toml
 
-      - name: Build pixi binary
-        run: pixi run build-release
+      - name: Download pixi binary
+        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4
+        with:
+          name: ${{ matrix.artifact }}-${{ inputs.sha }}
+          path: ${{ env.TARGET_RELEASE }}
 
       - name: Add pixi binary to PATH (Unix)
         if: runner.os != 'Windows'
