--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,13 @@
 format-command = "pixi run -e lint ruff format --stdin-filename {filename}"
 
 [tool.basedpyright]
-ignore = ["**/*.ipynb", "**/docs_hooks.py", "scripts/test_native_certs.py", "pixi-build-backends", "tests/data"]
+ignore = [
+  "**/*.ipynb",
+  "**/docs_hooks.py",
+  "scripts/test_native_certs.py",
+  "pixi-build-backends",
+  "tests/data",
+]
 pythonPlatform = "All"
 pythonVersion = "3.13"
 typeCheckingMode = "all"
