--- a/crates/pixi-build-rattler-build/Cargo.toml
+++ b/crates/pixi-build-rattler-build/Cargo.toml
@@ -10,6 +10,7 @@ rustls-tls = ["pixi-build-backend/rustls-tls", "rattler-build/rustls-tls"]
 
 [dependencies]
 async-trait = { workspace = true }
+fs-err = { workspace = true }
 miette = { workspace = true }
 pathdiff = { workspace = true }
 rattler-build = { workspace = true }
