--- a/crates/pixi-build-cmake/Cargo.toml
+++ b/crates/pixi-build-cmake/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 description = "CMake build backend for Pixi"
 edition.workspace = true
+license.workspace = true
 name = "pixi-build-cmake"
 version = "0.3.7"
 
