--- a/pixi.toml
+++ b/pixi.toml
@@ -273,6 +273,24 @@ description = "Build build-backends used for testing purposes"
 [feature.dist.dependencies]
 zig = ">=0.15.1,<0.16"
 
+#
+# Feature for building and releasing pixi-build-backends
+#
+[feature.backends-release.dependencies]
+rattler-build = ">=0.55.0,<0.56"
+python = ">=3.12,<4"
+sccache = ">=0.12,<0.13"
+
+[feature.backends-release.activation.env]
+RUSTC_WRAPPER = "sccache"
+
+[feature.backends-release.tasks]
+generate-matrix = { cmd = "python pixi-build-backends/scripts/generate-matrix.py", description = "Generate build matrix for backends release" }
+
+[feature.backends-release.tasks.build-recipe-ci]
+cmd = "rattler-build build --test native --channel https://prefix.dev/pixi-build-backends --channel https://prefix.dev/conda-forge --variant-config pixi-build-backends/recipe/variants.yaml --output-dir={{ output_dir }} --recipe {{ recipe }}{% if target_platform is defined and target_platform %} --target-platform {{ target_platform }}{% endif %}"
+args = ["output_dir", "recipe", { arg = "target_platform", default = "" }]
+description = "Build a backend recipe for CI"
 
 # Feature for native-certs testing
 [feature.native-certs-test.dependencies]
@@ -320,6 +338,7 @@ schema = { features = [
 test-export = { features = ["micromamba"], no-default-feature = true }
 test-native-certs = { features = ["native-certs-test"] }
 trampoline = { features = ["trampoline"], no-default-feature = true }
+backends-release = { features = ["backends-release"], no-default-feature = true }
 
 
 #
