Build backends for testing but not release

--- a/crates/pixi-build-cmake/Cargo.toml
+++ b/crates/pixi-build-cmake/Cargo.toml
@@ -5,6 +5,9 @@ license.workspace = true
 name = "pixi-build-cmake"
 version = "0.3.7"
 
+[package.metadata.dist]
+dist = false
+
 [features]
 default = ["rustls-tls"]
 native-tls = ["pixi-build-backend/native-tls", "rattler-build/native-tls"]
