--- a/crates/pixi-build-python/Cargo.toml
+++ b/crates/pixi-build-python/Cargo.toml
@@ -4,6 +4,9 @@ license.workspace = true
 name = "pixi-build-python"
 version = "0.4.4"
 
+[package.metadata.dist]
+dist = false
+
 [features]
 default = ["rustls-tls"]
 native-tls = ["pixi-build-backend/native-tls"]
