--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -296,16 +296,17 @@ jobs:
       - name: "Build"
         run: >
           cargo build
-          -p pixi
           --locked
           --target x86_64-unknown-linux-musl
           --profile $CARGO_BUILD_PROFILE
-          --features self_update
+          --features pixi/self_update
       - name: "Upload binary"
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6
         with:
           name: pixi-linux-x86_64-${{ github.sha }}
-          path: ./target/x86_64-unknown-linux-musl/${{ env.CARGO_BUILD_PROFILE }}/pixi
+          path: |
+            ./target/x86_64-unknown-linux-musl/${{ env.CARGO_BUILD_PROFILE }}/pixi
+            ./target/x86_64-unknown-linux-musl/${{ env.CARGO_BUILD_PROFILE }}/pixi-build-*
           retention-days: 14
 
   build-binary-macos-aarch64:
@@ -323,15 +324,16 @@ jobs:
       - name: "Build"
         run: >
           cargo build
-          -p pixi
           --locked
           --profile $CARGO_BUILD_PROFILE
-          --features self_update
+          --features pixi/self_update
       - name: "Upload binary"
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6
         with:
           name: pixi-macos-aarch64-${{ github.sha }}
-          path: ./target/${{ env.CARGO_BUILD_PROFILE }}/pixi
+          path: |
+            ./target/${{ env.CARGO_BUILD_PROFILE }}/pixi
+            ./target/${{ env.CARGO_BUILD_PROFILE }}/pixi-build-*
           retention-days: 14
 
   build-binary-macos-x86_64:
@@ -349,15 +351,16 @@ jobs:
       - name: "Build"
         run: >
           cargo build
-          -p pixi
           --locked
           --profile $CARGO_BUILD_PROFILE
-          --features self_update
+          --features pixi/self_update
       - name: "Upload binary"
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6
         with:
           name: pixi-macos-x86_64-${{ github.sha }}
-          path: ./target/${{ env.CARGO_BUILD_PROFILE }}/pixi
+          path: |
+            ./target/${{ env.CARGO_BUILD_PROFILE }}/pixi
+            ./target/${{ env.CARGO_BUILD_PROFILE }}/pixi-build-*
           retention-days: 14
 
   build-binary-windows-x86_64:
@@ -382,15 +385,16 @@ jobs:
         working-directory: ${{ env.PIXI_WORKSPACE }}
         run: >
           cargo build
-          -p pixi
           --locked
           --profile $env:CARGO_BUILD_PROFILE
-          --features self_update
+          --features pixi/self_update
       - name: "Upload binary"
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6
         with:
           name: pixi-windows-x86_64-${{ github.sha }}
-          path: ${{ env.PIXI_WORKSPACE }}/target/${{ env.CARGO_BUILD_PROFILE }}/pixi.exe
+          path: |
+            ${{ env.PIXI_WORKSPACE }}/target/${{ env.CARGO_BUILD_PROFILE }}/pixi.exe
+            ${{ env.PIXI_WORKSPACE }}/target/${{ env.CARGO_BUILD_PROFILE }}/pixi-build-*.exe
           retention-days: 14
 
   build-binary-windows-aarch64:
@@ -418,16 +422,17 @@ jobs:
         working-directory: ${{ env.PIXI_WORKSPACE }}
         run: >
           cargo build
-          -p pixi
           --locked
           --target aarch64-pc-windows-msvc
           --profile $env:CARGO_BUILD_PROFILE
-          --features self_update
+          --features pixi/self_update
       - name: "Upload binary"
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6
         with:
           name: pixi-windows-aarch64-${{ github.sha }}
-          path: ${{ env.PIXI_WORKSPACE }}/target/aarch64-pc-windows-msvc/${{ env.CARGO_BUILD_PROFILE }}/pixi.exe
+          path: |
+            ${{ env.PIXI_WORKSPACE }}/target/aarch64-pc-windows-msvc/${{ env.CARGO_BUILD_PROFILE }}/pixi.exe
+            ${{ env.PIXI_WORKSPACE }}/target/aarch64-pc-windows-msvc/${{ env.CARGO_BUILD_PROFILE }}/pixi-build-*.exe
           retention-days: 14
 
   #
