Make sure Windows test failures are correctly displayed

--- a/.github/workflows/backends-ros.yml
+++ b/.github/workflows/backends-ros.yml
@@ -16,6 +16,9 @@ concurrency:
 permissions:
   contents: read
 
+env:
+  PYTHONIOENCODING: utf-8
+
 jobs:
   test:
     name: Test the pixi-build-ros package
