--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,17 +47,15 @@ clap = { version = "4.5.31", default-features = false }
 clap-verbosity-flag = "3.0.2"
 clap_complete = "4.5.46"
 clap_complete_nushell = "4.5.5"
-# Rattler crates
 coalesced_map = "0.1.2"
 comfy-table = "7.2.1"
 console = "0.16.1"
-# Force crc to 3.3.0 to satisfy both lzma-rs (^3.0.0) and lzma-rust2 (=3.3.0)
 console-subscriber = "0.5.0"
 crossbeam-channel = "0.5.14"
 csv = "1.3.1"
 ctrlc = "3.4.5"
 dashmap = "6.1.0"
-deno_task_shell = "0.26.0"
+deno_task_shell = "0.26.2"
 derive_more = "2.0.1"
 dialoguer = "0.12.0"
 digest = "0.10"
@@ -99,6 +97,7 @@ pep440_rs = "0.7.3"
 pep508_rs = "0.9.2"
 percent-encoding = "2.3.1"
 pin-project-lite = "0.2.16"
+pixi-build-backend = { path = "crates/pixi-build-backend" }
 pixi_allocator = { path = "crates/pixi_allocator" }
 pixi_api = { path = "crates/pixi_api" }
 pixi_auth = { path = "crates/pixi_auth", default-features = false }
@@ -136,8 +135,6 @@ pixi_utils = { path = "crates/pixi_utils", default-features = false }
 pixi_uv_context = { path = "crates/pixi_uv_context" }
 pixi_uv_conversions = { path = "crates/pixi_uv_conversions" }
 pixi_variant = { path = "crates/pixi_variant" }
-# Pixi build backends
-pixi-build-backend = { path = "crates/pixi-build-backend" }
 pypi_mapping = { path = "crates/pypi_mapping" }
 pypi_modifiers = { path = "crates/pypi_modifiers" }
 pyproject-toml = "0.13.7"
@@ -186,7 +183,7 @@ serde_ignored = "0.1.10"
 serde_json = "1.0.139"
 serde_with = "=3.16.1"
 serde_yaml = "0.9.34"
-sevenz-rust2 = "0.19.4"
+sevenz-rust2 = "0.20.0"
 shlex = "1.3.0"
 signal-hook = "0.3.17"
 simple_spawn_blocking = { version = "1.1.0", default-features = false }
@@ -217,6 +214,7 @@ uv-auth = { git = "https://github.com/astral-sh/uv", tag = "0.9.5" }
 uv-build-frontend = { git = "https://github.com/astral-sh/uv", tag = "0.9.5" }
 uv-cache = { git = "https://github.com/astral-sh/uv", tag = "0.9.5" }
 uv-cache-info = { git = "https://github.com/astral-sh/uv", tag = "0.9.5" }
+uv-cache-key = { git = "https://github.com/astral-sh/uv", tag = "0.9.5" }
 uv-client = { git = "https://github.com/astral-sh/uv", tag = "0.9.5" }
 uv-configuration = { git = "https://github.com/astral-sh/uv", tag = "0.9.5" }
 uv-dispatch = { git = "https://github.com/astral-sh/uv", tag = "0.9.5" }
