--- a/lefthook.yaml
+++ b/lefthook.yaml
@@ -18,7 +18,7 @@ output:
   - skips # Print "skip" (i.e. no files matched)
 
 pre-commit:
-  parallel: false
+  parallel: true
   jobs:
     - name: actionlint
       run: pixi {run} -e lint actionlint
